fdo#32826: Finally return the real selected sheets, and use it.

This should solve the problem reported in fdo#32826, which is, when
printing from print preview window always prints all sheets regardless
of currently selected sheets.